--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-image": "^1.0.5",
+    "gulp-image-resize": "^0.6.0",
+    "gulp-imagemin": "^2.3.0",
     "gulp-minify-html": "^1.0.4",
     "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.4.0"
+    "gulp-uglify": "^1.4.0",
+    "imagemin-pngquant": "^4.2.0"
   }
 }
